CXBOX-1341 | Fixed. Qodana in pickTree, assocTree and multivalueTree samples: toList, orElseThrow, typed AssociateResultDTO; Info widget of the PickTreePopup all-fields sample wired to a view