@@ -15,7 +15,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @SuppressWarnings("java:S1170")
 @RequiredArgsConstructor
@@ -47,7 +46,7 @@ public class MyExample3343Service extends VersionAwareResponseService<MyExample3
 					.filter(Objects::nonNull)
 					.map(Long::parseLong)
 					.map(e -> entityManager.getReference(MyEntity3343Multi.class, e))
-					.collect(Collectors.toList()));
+					.toList());
 		}
 		if (data.isFieldChanged(org.demo.documentation.widgets.picktree.base.allfields.MyExample3343DTO_.customFieldInlinePickTreeId)) {
 			entity.setCustomFieldInlinePickTreeEntity(data.getCustomFieldInlinePickTreeId() != null
